[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itchfeed"
dynamic = ["version"]
description = "Simple parser for ITCH messages"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Bertin Balouki SIMYELI", email = "bertin@bbs-trading.com"},
]
maintainers = [
    {name = "Bertin Balouki SIMYELI", email = "bertin@bbs-trading.com"},
]
keywords = [
    "Finance", "Financial", "Quantitative", "Equities",
    "Totalview-ITCH", "Totalview", "Nasdaq-ITCH", "Nasdaq",
    "ITCH", "Data", "Feed", "ETFs", "Funds", "Trading", "Investing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/bbalouki/itch"
"Download" = "https://pypi.org/project/itchfeed/"
"Source Code" = "https://github.com/bbalouki/itch"

[tool.setuptools]
packages = ["itch"]

[tool.setuptools.dynamic]
version = { file = ["VERSION.txt"] }
